@@ -55,6 +55,7 @@ J. Leung
 Harald Wellmann
 Karl Hammar
 Keith Packard
+Mark Dewey
 Michael Meixner
 Orm Finnendahl
 Quentin Spencer
@@ -62,6 +63,7 @@ Rick Hansen
 Ruud van Silfhout
 Sietse Brouwer
 Stephen Carter
+Thies Albrecht
 Trent Johnston
 Vaclav Smilauer
 Werner Lemberg
