@@ -190,11 +190,13 @@ BOM_UTF8	\357\273\277
 	s = s.substr (0, s.rfind ('\"'));
 
 	yy_pop_state ();
-	if (!is_valid_version (s))
-		return INVALID;
 
 	SCM top_scope = scm_car (scm_last_pair (scopes_));
 	scm_module_define (top_scope, ly_symbol2scm ("version-seen?"), SCM_BOOL_T);
+
+	if (!is_valid_version (s))
+		return INVALID;
+
 
 }
 <sourcefilename>\"[^"]*\"     {
