@@ -1,8 +1,15 @@
 2006-06-13  Han-Wen Nienhuys  <hanwen@lilypond.org>
 
+	* lily/tuplet-bracket.cc (calc_positions): look at
+	stem-end-position for tuplet bracket slope. Fixes sloped tuplet
+	brackets narrower than beams. Backportme.
+
+	* lily/lexer.ll: set version-seen? even if version is
+	INVALID. Backportme.
+
 	* lily/rest.cc (y_offset_callback): bugfix: decide position
 	override based on scm_is_number(). Fixes \rest on center staff
-	line
+	line. Backportme.
 
 	* lily/beaming-pattern.cc (best_splitpoint_index): fix beaming
 	patterns for 16th triplets.
